more spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -104,7 +104,7 @@ div {
   }
 
   50% {
-    transform: translate(-50px, 0px);
+    transform: translate(-50px, 20px);
   }
 
   75% {
@@ -148,7 +148,7 @@ div {
   0% {
     max-height: 0;
   }
-  
+
   100% {
     max-height: 1.5em;
   }
